WIP 'Magic Fix' for #116029.

I have a vague very, very idea of why this seems to fix the reported issue.
This double call to `BKE_paint_brush_set` does not look right anyway.

I have absolutely no idea why that issue happens in the first place, nor
what would be the actual implications of this change.

My current best hunch is that there is no proper initial setting of the
`tool_slots`, or that `BKE_paint_brush_set` gets called at some point with
a `null` brush pointer, which messes things up?