source/blender/windowmanager/intern/wm_toolsystem.cc
@@ -207,7 +207,6 @@ static void toolsystem_ref_link(bContext *C, WorkSpace *workspace, bToolRef *tre
               }
               BKE_paint_brush_set(paint, brush);
             }
-            BKE_paint_brush_set(paint, brush);
           }
         }
       }
